# desktop-automation-agent

./: .env.example  .gitignore  README.md  RELEASING.md  _test_triggers.py  config.yaml  main.py  pyproject.toml  see_test.json  siemens_ca_chain.pem
.agent_history/: history.txt
agent/: __init__.py  context.py  loop.py  planner.py  tool_dispatcher.py
cli/: __init__.py  app.py  display.py
config/: __init__.py  model_provider.py  service.py  settings.py
credentials/: __init__.py  store.py
data/: test.db
desktop/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
docs/: APPLICATION_SKILL_GUIDE.md  DEMO_TO_TASK_RECORDER_PLAN.md  WINDOWS_RUNBOOK.md
eval-image-processing/: draw_points.py
llm/: __init__.py  client.py  providers.py  usage.py
memory/: __init__.py  models.py  store.py
runtime/: __init__.py  api.py  controller.py  events.py  evidence.py  lock.py  manager.py  models.py  observation.py  persistence.py
scheduler/: __init__.py  engine.py  job_runner.py
scripts/: release.py
skills/: __init__.py  executor.py  parser.py  registry.py  repository.py  schema.py
specs/: electron_desktop_agent_mvp.md  task_planning_and_vision_click.md
tasks/: __init__.py  repository.py  runner.py  schema.py  validation.py
tests/: test_action_verification.py  test_actions.py  test_agent_plan_policy.py  test_configuration_service.py  test_model_providers.py  test_outlook_adapter.py  test_runtime.py  test_runtime_api.py  test_runtime_evidence.py  test_runtime_observation.py  test_runtime_persistence.py  test_scheduler.py  (+6 more)
(+31 files in other folders)
