[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desktop-agent"
version = "0.1.0"
description = "A Claude Code-style desktop automation agent for Windows"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",             # OpenAI Python SDK，直接调用本地/云端 OpenAI 兼容接口
    "rich>=13.0",
    "click>=8.1",
    "apscheduler>=3.10",
    "sqlmodel>=0.0.19",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic-settings>=2.0",
    "prompt-toolkit>=3.0",
    "playwright>=1.45",
    "pillow>=10.0",
]

[project.scripts]
desktop-agent = "main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
